<!-- <package format="2"> -->
  <package format="2">
  <name>mylink_urdf</name>
  <version>0.1.0</version>
  <description>
    <p>URDF Description package for mylink_urdf</p>
    <p>This package contains configuration data, 3D models and launch files
for mylink_urdf robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>rrbot_control</depend>
  <depend>rrbot_description</depend>
  <depend>xacro</depend>




  <export>
    <architecture_independent />
  </export>
</package>